--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,8 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.3",
+    "toastify": "^2.0.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
