--- a/my-app/package.json
+++ b/my-app/package.json
@@ -40,7 +40,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.5.1",
-    "tailwindcss": "^4.0.5"
+    "postcss": "^8.5.2",
+    "tailwindcss": "3.4.17"
   }
 }
