--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
     "express": "^4.21.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.5"
+    "mongoose": "^8.9.5",
+    "pdf-lib": "^1.17.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
