--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "gridfs-stream": "^1.1.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.5",
+    "mongoose": "^8.12.2",
+    "multer": "^1.4.5-lts.2",
+    "multer-gridfs-storage": "^5.0.2",
     "pdf-lib": "^1.17.1"
   },
   "devDependencies": {
