--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@google/genai": "^1.0.0",
     "@google/generative-ai": "^0.21.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
